2008-10-09  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/src/sourcebuffer.hg: Wrapped properties.

2008-09-01  Dodji Seketeli  <dodji@gnome.org>

	* gtksourceview/src/sourcebuffer.hg: Update API Documentation.
	* gtksourceview/src/sourceview.hg: Likewise.

2008-05-31 Dodji Seketeli <dodji@gnome.org>

	* autogen.sh: use automake 1.10

2008-04-30  Murray Cumming  <murrayc@murrayc.com>

	* docs/reference/reference-index.txt: Updated the download link
	because I changed that tarball name to gtksourceviewmm*.tar.gz instead 
	of libgtksourceviewmm.tar.gz, to be consistent with the other similar 
	changes. Mentioned gtkmm-list instead of the gtksourceviewmm list.

2.2.0:

2008-04-25  Deng Xiyue  <manphiz@gmail.com>

	* gtksourceview/src/sourcestyle.ccg:
	* tests/test-search.cpp: Include <cstring> to fix the build with 
	gcc 4.3.

1.9.5:

2008-04-25  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/src/gtksourceview_signals.defs: Regenerated.
	* gtksourceview/src/sourcebuffer.hg: Added the source_mark_updated 
	signal.
	* gtksourceview/src/sourcemark.ccg:
	* gtksourceview/src/sourcemark.hg: Constructor: Added the optional 
	name parameter.
	* gtksourceview/src/sourcestyle.hg: Added the copy() method.
	* gtksourceview/src/sourcestyleschememanager.ccg:
	* gtksourceview/src/sourcestyleschememanager.hg:
	Added set_search_path(), reset_search_path, get_search_path(), and 
	get_scheme_ids().
	* gtksourceview/src/sourceview.hg: Added properties.

1.9.4:

2008-02-06  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/src/gtksourceview_methods.defs:
	* gtksourceview/src/sourcebuffer.hg: Added remove_source_marks(), 
	using the latest gtksourceview API with my const correction.

2008-02-06  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/src/gtksourceview_docs.xml: Removed an odd character that 
	was causing a warning.

	* gtksourceview/src/gtksourceview_methods.defs: Regenerated with 
	h2defs.py
	* gtksourceview/src/sourcebuffer.ccg: