@@ -1,3 +1,8 @@
+2008-12-12  Balazs Tirpak  <balazs.tirpak@gmail.com>
+
+	* gtksourceview/src/sourcelanguagemanager.hg: Wrapped
+	gtk_source_language_manager_guess_language().
+
 2008-10-09  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtksourceview/src/sourcebuffer.hg: Wrapped properties.
